fix content z-index on GridMotion

--- a/src/content/Backgrounds/GridMotion/GridMotion.scss
+++ b/src/content/Backgrounds/GridMotion/GridMotion.scss
@@ -79,7 +79,7 @@
 .row__item-content {
   padding: 1rem;
   text-align: center;
-  z-index: -1; // Ensure content is on top of the background
+  z-index: 1; // Ensure content is on top of the background
 }
 
 .fullview {
